--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "commander": "^2.14.0",
+    "copy": "^0.3.1",
     "execa": "^0.9.0",
     "lodash": "^4.17.5",
     "npmlog": "^4.1.2"
